// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pages/Custom Default 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c13 {
  padding: 24px;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c1 {
  background-color: #f0f2f5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  background-color: #ffffff;
  margin: 8px;
  min-height: calc(100vh - 72px - 48px - 16px);
  border-radius: 4px;
  box-shadow: 0px 3px 5px 0px rgba(1,30,56,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  padding: 2px;
  color: #ffffff;
  min-width: 20px;
}

.c15 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c14 {
  margin-bottom: 48px;
  margin-top: 0;
  font-size: 46px;
  line-height: 1.04347826;
  font-weight: 300;
}

.c3 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  cursor: pointer;
  color: #1254c7;
}

.c4 {
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 2px 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #ffffff;
  border: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
  -webkit-transition: background-color .2s;
  transition: background-color .2s;
  font-size: 16px;
  padding: 8px 28px 8px 16px;
  border-radius: 4px;
}

.c8:hover,
.c8:focus {
  outline: none;
  color: #e1ebfa;
  background-color: #011e38;
  cursor: pointer;
}

.c8:focus {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c8:disabled {
  opacity: .5;
}

.c10 {
  display: block;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  background-color: transparent;
  vertical-align: middle;
  line-height: 1.5;
  font-size: 16px;
  padding: 8px 16px;
  border-radius: 4px;
  -webkit-transition: .2s;
  transition: .2s;
}

.c10:hover,
.c10:focus {
  outline: none;
  color: #e1ebfa;
  background-color: #011e38;
  cursor: pointer;
}

.c10:disabled {
  opacity: .5;
}

.c10:focus {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 div:not(:last-of-type) {
  margin-right: 8px;
}

.c2 {
  background-color: #122b47;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #122b47;
  padding: 16px 24px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <header
        className=""
      >
        <div
          className="c2"
        >
          <a
            aria-label="Nulogy logo"
            className="c3"
            color="blue"
            fontSize="medium"
            href="/"
            style={
              Object {
                "display": "block",
                "height": "40px",
              }
            }
          >
            <div
              className="c4 "
              size="medium"
            >
              <svg
                height="32px"
                style={
                  Object {
                    "display": "block",
                    "margin": "2px 0",
                  }
                }
                viewBox="0 0 133 32"
                width="133px"
              >
                <path
                  d="M30.6967273,1.13648485 L36.3810909,3.40945455 L36.3810909,23.8758788 C36.3810909,28.2705455 30.9507879,29.0424242 27.2853333,29.5602424 C29.3818182,29.0424242 30.7083636,28.4606061 30.6967273,23.8758788 L30.6967273,5.68436364 L25.0123636,3.40945455 L30.6967273,1.13648485 Z M6.82084848,28.4237576 L6.82084848,15.9204848 C6.82084848,14.6618182 7.76533333,13.238303 8.91151515,12.7476364 L14.7801212,10.2264242 L14.7801212,18.1779394 L20.4644848,21.6048485 C21.6106667,22.1866667 23.8758788,22.2002424 23.8758788,20.4664242 L23.8758788,17.0550303 L21.5990303,15.9166061 L21.5990303,1.56319402e-13 L4.26666667,6.38642424 C1.91030303,7.25333333 3.55271368e-15,9.98593939 3.55271368e-15,12.5071515 L3.55271368e-15,31.2669091 L6.82084848,28.4237576 Z"
                  fill="#F0B41C"
                />
                <g
                  fill="#FFFFFF"
                  transform="translate(43.000000, 0.000000)"
                >
                  <path
                    d="M5.14521212,24.2224981 L1.33226763e-14,24.2224981 L1.33226763e-14,9.41134654 L4.75151515,9.41134654 L4.75151515,11.8937708 C5.43733518,11.0060378 6.29475204,10.2653615 7.27272727,9.71583139 C8.16188898,9.23817548 9.15699751,8.9920662 10.166303,9.00019502 C11.7333333,9.00019502 12.9221818,9.44948795 13.7328485,10.3480738 C14.5435152,11.2466597 14.9488485,12.5615688 14.9488485,14.2928011 L14.9488485,24.2224981 L9.83078788,24.2224981 L9.83078788,15.7376496 C9.83078788,14.961892 9.67175758,14.3755486 9.35369697,13.9786193 C9.03563636,13.58169 8.56436364,13.3877506 7.93987879,13.3968011 C7.04258586,13.3968011 6.35216162,13.6980536 5.86860606,14.3005587 C5.38505051,14.9030637 5.14391919,15.7803162 5.14521212,16.9323162 L5.14521212,24.2224981 Z"
                  />
                  <path
                    d="M27.8366061,9 L32.9507879,9 L32.9507879,22.6203636 L28.1992727,24.5190303 L28.1992727,21.6254545 C27.5124636,22.5143219 26.6553593,23.2573653 25.6780606,23.8111515 C24.7938668,24.2845189 23.8048332,24.5279425 22.8019394,24.5190303 C21.2323232,24.5190303 20.0402424,24.0665051 19.225697,23.1614545 C18.4111515,22.256404 18.0025859,20.9408485 18,19.2147879 L18,9 L23.1452121,9 L23.1452121,17.7796364 C23.1452121,18.5553939 23.3042424,19.1443232 23.622303,19.5464242 C23.9403636,19.9485253 24.4116364,20.1482828 25.0361212,20.145697 C25.9411717,20.145697 26.631596,19.8418586 27.1073939,19.2341818 C27.5831919,18.6265051 27.8243232,17.7524848 27.8307879,16.6121212 L27.8366061,9 Z"
                  />
                  <polygon
                    id="Path"
                    points="38.7151515 24.5546667 36 24.5546667 36 1.088 38.7151515 1.15463195e-13"
                  />
                  <path
                    d="M41,17.0717576 C41,14.7263838 41.7453737,12.7947475 43.2361212,11.2768485 C44.7268687,9.75894949 46.6171313,9 48.9069091,9 C51.1966869,9 53.0869495,9.75894949 54.577697,11.2768485 C56.0684444,12.7947475 56.8138182,14.7263838 56.8138182,17.0717576 C56.8138182,19.4274747 56.0684444,21.3668687 54.577697,22.8899394 C53.0869495,24.4130101 51.1966869,25.1719596 48.9069091,25.1667879 C46.6261818,25.1667879 44.7385051,24.4078384 43.2438788,22.8899394 C41.7492525,21.3720404 41.0012929,19.4326465 41,17.0717576 Z M43.6957576,17.0717576 C43.6957576,18.9141818 44.172202,20.3965253 45.1250909,21.5187879 C46.0779798,22.6410505 47.327596,23.2028283 48.8739394,23.2041212 C50.4254545,23.2041212 51.6802424,22.6423434 52.638303,21.5187879 C53.5963636,20.3952323 54.0786263,18.9128889 54.0850909,17.0717576 C54.0850909,15.2422626 53.6028283,13.7657374 52.638303,12.6421818 C51.6737778,11.5186263 50.4189899,10.9574949 48.8739394,10.9587879 C47.3224242,10.9587879 46.0728081,11.5205657 45.1250909,12.6441212 C44.1773737,13.7676768 43.7009293,15.2435556 43.6957576,17.0717576 Z"
                  />
                  <path
                    d="M70.0824261,23.582303 C69.3285884,24.0285568 68.5220417,24.3790594 67.6814564,24.625697 C66.9065592,24.8487063 66.1042899,24.9622904 65.2979413,24.9631515 C63.1180625,24.9631515 61.3564463,24.2397576 60.0130928,22.7929697 C58.6697392,21.3461818 57.9987089,19.4449293 58.0000019,17.0892121 C58.0000019,14.6882424 58.7175776,12.739798 60.1527291,11.2438788 C61.5878807,9.7479596 63.4626281,9 65.7769716,9 C66.5067857,9.0106757 67.2345208,9.08072506 67.9529716,9.20945455 C68.7804463,9.34650505 69.737214,9.55725253 70.8232746,9.84169697 L72.745214,9.06593939 L72.745214,22.4283636 C72.745214,24.213899 72.6605271,25.520404 72.4911534,26.3478788 C72.3424597,27.1215145 72.0497022,27.860316 71.6281231,28.5258182 C70.9908577,29.4891385 70.0844202,30.2438287 69.0215776,30.696 C67.7834618,31.2231176 66.4474127,31.48094 65.1020625,31.4523636 C64.1335045,31.4523045 63.1689244,31.3284732 62.2317594,31.0838788 C61.252533,30.8239772 60.3068642,30.4510466 59.41382,29.9726061 L58.9696988,26.7512727 L60.9575776,28.0506667 C61.5573127,28.4240193 62.2116549,28.7014604 62.8969716,28.8729697 C63.6457641,29.0836796 64.4192481,29.1938978 65.1970928,29.2007273 C66.7486079,29.2007273 67.9516786,28.8128485 68.8063049,28.0370909 C69.6609312,27.2613333 70.0863049,26.1571717 70.0824261,24.7246061 L70.0824261,23.582303 Z M70.0824261,21.5595152 L70.0824261,12.0739394 C69.4432737,11.7542576 68.7741844,11.4983147 68.0848503,11.3098182 C67.4816476,11.1457578 66.859767,11.0603633 66.2346685,11.0557576 C64.581012,11.0557576 63.2499413,11.6117172 62.2414564,12.7236364 C61.2329716,13.8355556 60.7280827,15.3146667 60.7267897,17.1609697 C60.7267897,18.9348687 61.179315,20.3428687 62.0843655,21.3849697 C62.989416,22.4270707 64.2086483,22.9474747 65.7420625,22.9461818 C66.3845516,22.9385817 67.0221469,22.8332967 67.6329716,22.6339394 C68.4792669,22.3480186 69.2988853,21.9885027 70.0824261,21.5595152 L70.0824261,21.5595152 Z"
                  />
                  <path
                    d="M75,9 L77.8276364,9 L82.2649697,20.6363636 L87.1483636,9 L89.4504242,9 L82.3813333,25.3238788 L82.2649697,25.5546667 C81.1478788,28.0965657 80.2874343,29.9066667 79.6836364,30.9849697 L76.7415758,30.9849697 C77.3683498,30.3346009 77.9302011,29.6246546 78.4191515,28.8652121 C79.0313917,27.8817808 79.5750659,26.8572886 80.046303,25.7990303 L81.0004848,23.7452121 L75,9 Z"
                  />
                </g>
              </svg>
            </div>
          </a>
          <div
            className="c5"
            style={
              Object {
                "flexGrow": "1",
                "margin": "0 0 0 24px",
              }
            }
          >
            <nav
              aria-label="Primary navigation"
              className="c6 c7"
              style={
                Object {
                  "paddingRight": "24px",
                }
              }
            >
              <div>
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="c8"
                  color="#ffffff"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  Dashboard
                  <svg
                    aria-hidden={true}
                    className="c9"
                    color="#ffffff"
                    fill="#ffffff"
                    focusable={false}
                    height="20px"
                    icon="downArrow"
                    p="2px"
                    size="20px"
                    style={
                      Object {
                        "position": "absolute",
                        "right": "8px",
                        "top": "11px",
                      }
                    }
                    title={null}
                    viewBox="0 0 24 24"
                    width="20px"
                  >
                    <path
                      d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                    />
                  </svg>
                </button>
              </div>
              <div>
                <a
                  className="c10"
                  color="#ffffff"
                  href="/"
                >
                  Link
                </a>
              </div>
            </nav>
            <div
              className="c11"
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <nav
                aria-label="Secondary navigation"
                className="c6 c7"
              >
                <div>
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="c8"
                    color="#ffffff"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    Settings
                    <svg
                      aria-hidden={true}
                      className="c9"
                      color="#ffffff"
                      fill="#ffffff"
                      focusable={false}
                      height="20px"
                      icon="downArrow"
                      p="2px"
                      size="20px"
                      style={
                        Object {
                          "position": "absolute",
                          "right": "8px",
                          "top": "11px",
                        }
                      }
                      title={null}
                      viewBox="0 0 24 24"
                      width="20px"
                    >
                      <path
                        d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </header>
      <div
        className="c12"
      >
        <div
          className="c13"
        >
          <h1
            className="c14"
            fontSize="largest"
            fontWeight="light"
          >
            I am title
          </h1>
          <p
            className="c15"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            I am main content.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Custom With breadcrumbs and actions 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c14 {
  padding-top: 8px;
  padding-right: 24px;
  padding-bottom: 24px;
  padding-left: 24px;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c24 {
  background-color: #ffffff;
  padding-top: 24px;
  padding-right: 16px;
  padding-bottom: 24px;
  padding-left: 24px;
  border-radius: 4px;
}

.c1 {
  background-color: #f0f2f5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  background-color: #ffffff;
  margin: 8px;
  min-height: calc(100vh - 72px - 48px - 16px);
  border-radius: 4px;
  box-shadow: 0px 3px 5px 0px rgba(1,30,56,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  height: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c16 {
  padding-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c25 {
  margin-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  padding: 2px;
  color: #ffffff;
  min-width: 20px;
}

.c18 {
  margin-right: 4px;
  color: #434d59;
  min-width: 20px;
}

.c20 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c23 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c21 {
  margin-bottom: 48px;
  margin-top: 0;
  font-size: 46px;
  line-height: 1.04347826;
  font-weight: 300;
}

.c26 {
  margin-top: 4px;
  margin-bottom: 16px;
  font-weight: 500;
  font-size: 26px;
  line-height: 1.23076923;
}

.c19 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
  margin-top: 16px;
}

.c19 .c9 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c19 .c22 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c19 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c19:hover .c9 {
  background-color: #e1ebfa;
}

.c19:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c19:active .c9 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c19:disabled {
  opacity: .5;
}

.c19:disabled:hover .c9,
.c19:disabled:active .c9 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c19:focus {
  outline: none;
}

.c19:focus .c9 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c19:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c27 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
}

.c27 .c9 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c27 .c22 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c27 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c27:hover .c9 {
  background-color: #e1ebfa;
}

.c27:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c27:active .c9 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c27:disabled {
  opacity: .5;
}

.c27:disabled:hover .c9,
.c27:disabled:active .c9 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c27:focus {
  outline: none;
}

.c27:focus .c9 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c27:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c3 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  cursor: pointer;
  color: #1254c7;
}

.c17 {
  color: #00438f;
  margin-right: 4px;
  font-size: 12px;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c17:hover {
  cursor: pointer;
  color: #002b5c;
}

.c4 {
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 2px 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #ffffff;
  border: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
  -webkit-transition: background-color .2s;
  transition: background-color .2s;
  font-size: 16px;
  padding: 8px 28px 8px 16px;
  border-radius: 4px;
}

.c8:hover,
.c8:focus {
  outline: none;
  color: #e1ebfa;
  background-color: #011e38;
  cursor: pointer;
}

.c8:focus {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c8:disabled {
  opacity: .5;
}

.c11 {
  display: block;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  background-color: transparent;
  vertical-align: middle;
  line-height: 1.5;
  font-size: 16px;
  padding: 8px 16px;
  border-radius: 4px;
  -webkit-transition: .2s;
  transition: .2s;
}

.c11:hover,
.c11:focus {
  outline: none;
  color: #e1ebfa;
  background-color: #011e38;
  cursor: pointer;
}

.c11:disabled {
  opacity: .5;
}

.c11:focus {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 div:not(:last-of-type) {
  margin-right: 8px;
}

.c2 {
  background-color: #122b47;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #122b47;
  padding: 16px 24px;
}

@media screen and (min-width:0px) {
  .c24 {
    width: calc(100vw - 48px - 16px);
  }
}

@media screen and (min-width:1024px) {
  .c24 {
    width: 400px;
  }
}

@media screen and (min-width:1360px) {
  .c24 {
    width: 472px;
  }
}

@media screen and (min-width:1024px) {
  .c24 {
    border-left: solid 1px #e4e7eb;
  }
}

@media screen and (min-width:0px) {
  .c24 {
    position: absolute;
  }
}

@media screen and (min-width:1024px) {
  .c24 {
    position: static;
  }
}

@media screen and (min-width:0px) {
  .c16 {
    width: calc(100vw - 96px - 16px);
  }
}

@media screen and (min-width:1024px) {
  .c16 {
    width: auto;
  }
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <header
        className=""
      >
        <div
          className="c2"
        >
          <a
            aria-label="Nulogy logo"
            className="c3"
            color="blue"
            fontSize="medium"
            href="/"
            style={
              Object {
                "display": "block",
                "height": "40px",
              }
            }
          >
            <div
              className="c4 "
              size="medium"
            >
              <svg
                height="32px"
                style={
                  Object {
                    "display": "block",
                    "margin": "2px 0",
                  }
                }
                viewBox="0 0 133 32"
                width="133px"
              >
                <path
                  d="M30.6967273,1.13648485 L36.3810909,3.40945455 L36.3810909,23.8758788 C36.3810909,28.2705455 30.9507879,29.0424242 27.2853333,29.5602424 C29.3818182,29.0424242 30.7083636,28.4606061 30.6967273,23.8758788 L30.6967273,5.68436364 L25.0123636,3.40945455 L30.6967273,1.13648485 Z M6.82084848,28.4237576 L6.82084848,15.9204848 C6.82084848,14.6618182 7.76533333,13.238303 8.91151515,12.7476364 L14.7801212,10.2264242 L14.7801212,18.1779394 L20.4644848,21.6048485 C21.6106667,22.1866667 23.8758788,22.2002424 23.8758788,20.4664242 L23.8758788,17.0550303 L21.5990303,15.9166061 L21.5990303,1.56319402e-13 L4.26666667,6.38642424 C1.91030303,7.25333333 3.55271368e-15,9.98593939 3.55271368e-15,12.5071515 L3.55271368e-15,31.2669091 L6.82084848,28.4237576 Z"
                  fill="#F0B41C"
                />
                <g
                  fill="#FFFFFF"
                  transform="translate(43.000000, 0.000000)"
                >
                  <path
                    d="M5.14521212,24.2224981 L1.33226763e-14,24.2224981 L1.33226763e-14,9.41134654 L4.75151515,9.41134654 L4.75151515,11.8937708 C5.43733518,11.0060378 6.29475204,10.2653615 7.27272727,9.71583139 C8.16188898,9.23817548 9.15699751,8.9920662 10.166303,9.00019502 C11.7333333,9.00019502 12.9221818,9.44948795 13.7328485,10.3480738 C14.5435152,11.2466597 14.9488485,12.5615688 14.9488485,14.2928011 L14.9488485,24.2224981 L9.83078788,24.2224981 L9.83078788,15.7376496 C9.83078788,14.961892 9.67175758,14.3755486 9.35369697,13.9786193 C9.03563636,13.58169 8.56436364,13.3877506 7.93987879,13.3968011 C7.04258586,13.3968011 6.35216162,13.6980536 5.86860606,14.3005587 C5.38505051,14.9030637 5.14391919,15.7803162 5.14521212,16.9323162 L5.14521212,24.2224981 Z"
                  />
                  <path
                    d="M27.8366061,9 L32.9507879,9 L32.9507879,22.6203636 L28.1992727,24.5190303 L28.1992727,21.6254545 C27.5124636,22.5143219 26.6553593,23.2573653 25.6780606,23.8111515 C24.7938668,24.2845189 23.8048332,24.5279425 22.8019394,24.5190303 C21.2323232,24.5190303 20.0402424,24.0665051 19.225697,23.1614545 C18.4111515,22.256404 18.0025859,20.9408485 18,19.2147879 L18,9 L23.1452121,9 L23.1452121,17.7796364 C23.1452121,18.5553939 23.3042424,19.1443232 23.622303,19.5464242 C23.9403636,19.9485253 24.4116364,20.1482828 25.0361212,20.145697 C25.9411717,20.145697 26.631596,19.8418586 27.1073939,19.2341818 C27.5831919,18.6265051 27.8243232,17.7524848 27.8307879,16.6121212 L27.8366061,9 Z"
                  />
                  <polygon
                    id="Path"
                    points="38.7151515 24.5546667 36 24.5546667 36 1.088 38.7151515 1.15463195e-13"
                  />
                  <path
                    d="M41,17.0717576 C41,14.7263838 41.7453737,12.7947475 43.2361212,11.2768485 C44.7268687,9.75894949 46.6171313,9 48.9069091,9 C51.1966869,9 53.0869495,9.75894949 54.577697,11.2768485 C56.0684444,12.7947475 56.8138182,14.7263838 56.8138182,17.0717576 C56.8138182,19.4274747 56.0684444,21.3668687 54.577697,22.8899394 C53.0869495,24.4130101 51.1966869,25.1719596 48.9069091,25.1667879 C46.6261818,25.1667879 44.7385051,24.4078384 43.2438788,22.8899394 C41.7492525,21.3720404 41.0012929,19.4326465 41,17.0717576 Z M43.6957576,17.0717576 C43.6957576,18.9141818 44.172202,20.3965253 45.1250909,21.5187879 C46.0779798,22.6410505 47.327596,23.2028283 48.8739394,23.2041212 C50.4254545,23.2041212 51.6802424,22.6423434 52.638303,21.5187879 C53.5963636,20.3952323 54.0786263,18.9128889 54.0850909,17.0717576 C54.0850909,15.2422626 53.6028283,13.7657374 52.638303,12.6421818 C51.6737778,11.5186263 50.4189899,10.9574949 48.8739394,10.9587879 C47.3224242,10.9587879 46.0728081,11.5205657 45.1250909,12.6441212 C44.1773737,13.7676768 43.7009293,15.2435556 43.6957576,17.0717576 Z"
                  />
                  <path
                    d="M70.0824261,23.582303 C69.3285884,24.0285568 68.5220417,24.3790594 67.6814564,24.625697 C66.9065592,24.8487063 66.1042899,24.9622904 65.2979413,24.9631515 C63.1180625,24.9631515 61.3564463,24.2397576 60.0130928,22.7929697 C58.6697392,21.3461818 57.9987089,19.4449293 58.0000019,17.0892121 C58.0000019,14.6882424 58.7175776,12.739798 60.1527291,11.2438788 C61.5878807,9.7479596 63.4626281,9 65.7769716,9 C66.5067857,9.0106757 67.2345208,9.08072506 67.9529716,9.20945455 C68.7804463,9.34650505 69.737214,9.55725253 70.8232746,9.84169697 L72.745214,9.06593939 L72.745214,22.4283636 C72.745214,24.213899 72.6605271,25.520404 72.4911534,26.3478788 C72.3424597,27.1215145 72.0497022,27.860316 71.6281231,28.5258182 C70.9908577,29.4891385 70.0844202,30.2438287 69.0215776,30.696 C67.7834618,31.2231176 66.4474127,31.48094 65.1020625,31.4523636 C64.1335045,31.4523045 63.1689244,31.3284732 62.2317594,31.0838788 C61.252533,30.8239772 60.3068642,30.4510466 59.41382,29.9726061 L58.9696988,26.7512727 L60.9575776,28.0506667 C61.5573127,28.4240193 62.2116549,28.7014604 62.8969716,28.8729697 C63.6457641,29.0836796 64.4192481,29.1938978 65.1970928,29.2007273 C66.7486079,29.2007273 67.9516786,28.8128485 68.8063049,28.0370909 C69.6609312,27.2613333 70.0863049,26.1571717 70.0824261,24.7246061 L70.0824261,23.582303 Z M70.0824261,21.5595152 L70.0824261,12.0739394 C69.4432737,11.7542576 68.7741844,11.4983147 68.0848503,11.3098182 C67.4816476,11.1457578 66.859767,11.0603633 66.2346685,11.0557576 C64.581012,11.0557576 63.2499413,11.6117172 62.2414564,12.7236364 C61.2329716,13.8355556 60.7280827,15.3146667 60.7267897,17.1609697 C60.7267897,18.9348687 61.179315,20.3428687 62.0843655,21.3849697 C62.989416,22.4270707 64.2086483,22.9474747 65.7420625,22.9461818 C66.3845516,22.9385817 67.0221469,22.8332967 67.6329716,22.6339394 C68.4792669,22.3480186 69.2988853,21.9885027 70.0824261,21.5595152 L70.0824261,21.5595152 Z"
                  />
                  <path
                    d="M75,9 L77.8276364,9 L82.2649697,20.6363636 L87.1483636,9 L89.4504242,9 L82.3813333,25.3238788 L82.2649697,25.5546667 C81.1478788,28.0965657 80.2874343,29.9066667 79.6836364,30.9849697 L76.7415758,30.9849697 C77.3683498,30.3346009 77.9302011,29.6246546 78.4191515,28.8652121 C79.0313917,27.8817808 79.5750659,26.8572886 80.046303,25.7990303 L81.0004848,23.7452121 L75,9 Z"
                  />
                </g>
              </svg>
            </div>
          </a>
          <div
            className="c5"
            style={
              Object {
                "flexGrow": "1",
                "margin": "0 0 0 24px",
              }
            }
          >
            <nav
              aria-label="Primary navigation"
              className="c6 c7"
              style={
                Object {
                  "paddingRight": "24px",
                }
              }
            >
              <div>
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="c8"
                  color="#ffffff"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  Dashboard
                  <svg
                    aria-hidden={true}
                    className="c9 c10"
                    color="#ffffff"
                    fill="#ffffff"
                    focusable={false}
                    height="20px"
                    icon="downArrow"
                    p="2px"
                    size="20px"
                    style={
                      Object {
                        "position": "absolute",
                        "right": "8px",
                        "top": "11px",
                      }
                    }
                    title={null}
                    viewBox="0 0 24 24"
                    width="20px"
                  >
                    <path
                      d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                    />
                  </svg>
                </button>
              </div>
              <div>
                <a
                  className="c11"
                  color="#ffffff"
                  href="/"
                >
                  Link
                </a>
              </div>
            </nav>
            <div
              className="c12"
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <nav
                aria-label="Secondary navigation"
                className="c6 c7"
              >
                <div>
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="c8"
                    color="#ffffff"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    Settings
                    <svg
                      aria-hidden={true}
                      className="c9 c10"
                      color="#ffffff"
                      fill="#ffffff"
                      focusable={false}
                      height="20px"
                      icon="downArrow"
                      p="2px"
                      size="20px"
                      style={
                        Object {
                          "position": "absolute",
                          "right": "8px",
                          "top": "11px",
                        }
                      }
                      title={null}
                      viewBox="0 0 24 24"
                      width="20px"
                    >
                      <path
                        d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </header>
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <div
            className="c15"
            height="32px"
          >
            <div
              className="c16"
              width={
                Object {
                  "extraSmall": "calc(100vw - 96px - 16px)",
                  "medium": "auto",
                }
              }
            >
              <a
                className="c17"
                color="darkBlue"
                fontSize="smaller"
              >
                Breadcrumb
              </a>
              <svg
                aria-hidden={true}
                className="c9 c18"
                color="darkGrey"
                fill="#434d59"
                focusable={false}
                height="20px"
                icon="rightArrow"
                mr="half"
                size="20px"
                title={null}
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
              <a
                className="c17"
                color="darkBlue"
                fontSize="smaller"
              >
                Breadcrumb
              </a>
              <svg
                aria-hidden={true}
                className="c9 c18"
                color="darkGrey"
                fill="#434d59"
                focusable={false}
                height="20px"
                icon="rightArrow"
                mr="half"
                size="20px"
                title={null}
                viewBox="0 0 24 24"
                width="20px"
              >
                <path
                  d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                />
              </svg>
            </div>
            <button
              aria-label={null}
              className="c19 "
              disabled={false}
            >
              <svg
                aria-hidden={true}
                className="c9 c20"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="more"
                p="half"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </button>
          </div>
          <h1
            className="c22-h1 c21"
            fontSize="largest"
            fontWeight="light"
          >
            I am title
          </h1>
          <p
            className="c22 c23"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            I am main content.
          </p>
        </div>
        <div
          className="c24"
          width={
            Object {
              "extraSmall": "calc(100vw - 48px - 16px)",
              "large": "472px",
              "medium": "400px",
            }
          }
        >
          <div
            className="c25"
          >
            <h2
              className="c22-h2 c26"
              fontSize="larger"
              fontWeight="medium"
            >
              I am sidebar
            </h2>
            <button
              aria-label={null}
              className="c27 "
              disabled={false}
            >
              <svg
                aria-hidden={true}
                className="c9 c20"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="close"
                p="half"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
          <p
            className="c22 c23"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            I am sidebar content.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Custom With sidebar 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c14 {
  padding: 24px;
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
}

.c18 {
  background-color: #ffffff;
  padding-top: 24px;
  padding-right: 16px;
  padding-bottom: 24px;
  padding-left: 24px;
  border-radius: 4px;
}

.c1 {
  background-color: #f0f2f5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-content: flex-end;
  -ms-flex-line-pack: end;
  align-content: flex-end;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  background-color: #ffffff;
  margin: 8px;
  min-height: calc(100vh - 72px - 48px - 16px);
  border-radius: 4px;
  box-shadow: 0px 3px 5px 0px rgba(1,30,56,0.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  margin-bottom: 32px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c10 {
  padding: 2px;
  color: #ffffff;
  min-width: 20px;
}

.c22 {
  padding: 4px;
  color: currentColor;
  min-width: 32px;
}

.c17 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 16px;
  line-height: 1.5;
  color: currentColor;
}

.c15 {
  margin-bottom: 48px;
  margin-top: 0;
  font-size: 46px;
  line-height: 1.04347826;
  font-weight: 300;
}

.c20 {
  margin-top: 4px;
  margin-bottom: 16px;
  font-weight: 500;
  font-size: 26px;
  line-height: 1.23076923;
}

.c21 {
  background: transparent;
  border: none;
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0px;
  color: #00438f;
  cursor: pointer;
}

.c21 .c9 {
  border-radius: 50%;
  -webkit-transition: .2s;
  transition: .2s;
}

.c21 .c16 {
  display: block;
  font-weight: 500;
  text-align: left;
}

.c21 .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 0;
}

.c21:hover .c9 {
  background-color: #e1ebfa;
}

.c21:hover .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c21:active .c9 {
  -webkit-transform: scale(0.875);
  -ms-transform: scale(0.875);
  transform: scale(0.875);
  -webkit-transition: .2s ease-in;
  transition: .2s ease-in;
}

.c21:disabled {
  opacity: .5;
}

.c21:disabled:hover .c9,
.c21:disabled:active .c9 {
  background: none;
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
}

.c21:focus {
  outline: none;
}

.c21:focus .c9 {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c21:focus .IconicButton__HoverText-sc-1u3dojp-0 {
  opacity: 1;
}

.c3 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:hover {
  cursor: pointer;
  color: #1254c7;
}

.c4 {
  width: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding: 2px 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #ffffff;
  border: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  line-height: 1.5;
  -webkit-transition: background-color .2s;
  transition: background-color .2s;
  font-size: 16px;
  padding: 8px 28px 8px 16px;
  border-radius: 4px;
}

.c8:hover,
.c8:focus {
  outline: none;
  color: #e1ebfa;
  background-color: #011e38;
  cursor: pointer;
}

.c8:focus {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c8:disabled {
  opacity: .5;
}

.c11 {
  display: block;
  color: #ffffff;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
  background-color: transparent;
  vertical-align: middle;
  line-height: 1.5;
  font-size: 16px;
  padding: 8px 16px;
  border-radius: 4px;
  -webkit-transition: .2s;
  transition: .2s;
}

.c11:hover,
.c11:focus {
  outline: none;
  color: #e1ebfa;
  background-color: #011e38;
  cursor: pointer;
}

.c11:disabled {
  opacity: .5;
}

.c11:focus {
  box-shadow: 0px 0px 5px 0px rgba(33,107,235,.9);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 div:not(:last-of-type) {
  margin-right: 8px;
}

.c2 {
  background-color: #122b47;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #122b47;
  padding: 16px 24px;
}

@media screen and (min-width:0px) {
  .c18 {
    width: calc(100vw - 48px - 16px);
  }
}

@media screen and (min-width:1024px) {
  .c18 {
    width: 400px;
  }
}

@media screen and (min-width:1360px) {
  .c18 {
    width: 472px;
  }
}

@media screen and (min-width:1024px) {
  .c18 {
    border-left: solid 1px #e4e7eb;
  }
}

@media screen and (min-width:0px) {
  .c18 {
    position: absolute;
  }
}

@media screen and (min-width:1024px) {
  .c18 {
    position: static;
  }
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <header
        className=""
      >
        <div
          className="c2"
        >
          <a
            aria-label="Nulogy logo"
            className="c3"
            color="blue"
            fontSize="medium"
            href="/"
            style={
              Object {
                "display": "block",
                "height": "40px",
              }
            }
          >
            <div
              className="c4 "
              size="medium"
            >
              <svg
                height="32px"
                style={
                  Object {
                    "display": "block",
                    "margin": "2px 0",
                  }
                }
                viewBox="0 0 133 32"
                width="133px"
              >
                <path
                  d="M30.6967273,1.13648485 L36.3810909,3.40945455 L36.3810909,23.8758788 C36.3810909,28.2705455 30.9507879,29.0424242 27.2853333,29.5602424 C29.3818182,29.0424242 30.7083636,28.4606061 30.6967273,23.8758788 L30.6967273,5.68436364 L25.0123636,3.40945455 L30.6967273,1.13648485 Z M6.82084848,28.4237576 L6.82084848,15.9204848 C6.82084848,14.6618182 7.76533333,13.238303 8.91151515,12.7476364 L14.7801212,10.2264242 L14.7801212,18.1779394 L20.4644848,21.6048485 C21.6106667,22.1866667 23.8758788,22.2002424 23.8758788,20.4664242 L23.8758788,17.0550303 L21.5990303,15.9166061 L21.5990303,1.56319402e-13 L4.26666667,6.38642424 C1.91030303,7.25333333 3.55271368e-15,9.98593939 3.55271368e-15,12.5071515 L3.55271368e-15,31.2669091 L6.82084848,28.4237576 Z"
                  fill="#F0B41C"
                />
                <g
                  fill="#FFFFFF"
                  transform="translate(43.000000, 0.000000)"
                >
                  <path
                    d="M5.14521212,24.2224981 L1.33226763e-14,24.2224981 L1.33226763e-14,9.41134654 L4.75151515,9.41134654 L4.75151515,11.8937708 C5.43733518,11.0060378 6.29475204,10.2653615 7.27272727,9.71583139 C8.16188898,9.23817548 9.15699751,8.9920662 10.166303,9.00019502 C11.7333333,9.00019502 12.9221818,9.44948795 13.7328485,10.3480738 C14.5435152,11.2466597 14.9488485,12.5615688 14.9488485,14.2928011 L14.9488485,24.2224981 L9.83078788,24.2224981 L9.83078788,15.7376496 C9.83078788,14.961892 9.67175758,14.3755486 9.35369697,13.9786193 C9.03563636,13.58169 8.56436364,13.3877506 7.93987879,13.3968011 C7.04258586,13.3968011 6.35216162,13.6980536 5.86860606,14.3005587 C5.38505051,14.9030637 5.14391919,15.7803162 5.14521212,16.9323162 L5.14521212,24.2224981 Z"
                  />
                  <path
                    d="M27.8366061,9 L32.9507879,9 L32.9507879,22.6203636 L28.1992727,24.5190303 L28.1992727,21.6254545 C27.5124636,22.5143219 26.6553593,23.2573653 25.6780606,23.8111515 C24.7938668,24.2845189 23.8048332,24.5279425 22.8019394,24.5190303 C21.2323232,24.5190303 20.0402424,24.0665051 19.225697,23.1614545 C18.4111515,22.256404 18.0025859,20.9408485 18,19.2147879 L18,9 L23.1452121,9 L23.1452121,17.7796364 C23.1452121,18.5553939 23.3042424,19.1443232 23.622303,19.5464242 C23.9403636,19.9485253 24.4116364,20.1482828 25.0361212,20.145697 C25.9411717,20.145697 26.631596,19.8418586 27.1073939,19.2341818 C27.5831919,18.6265051 27.8243232,17.7524848 27.8307879,16.6121212 L27.8366061,9 Z"
                  />
                  <polygon
                    id="Path"
                    points="38.7151515 24.5546667 36 24.5546667 36 1.088 38.7151515 1.15463195e-13"
                  />
                  <path
                    d="M41,17.0717576 C41,14.7263838 41.7453737,12.7947475 43.2361212,11.2768485 C44.7268687,9.75894949 46.6171313,9 48.9069091,9 C51.1966869,9 53.0869495,9.75894949 54.577697,11.2768485 C56.0684444,12.7947475 56.8138182,14.7263838 56.8138182,17.0717576 C56.8138182,19.4274747 56.0684444,21.3668687 54.577697,22.8899394 C53.0869495,24.4130101 51.1966869,25.1719596 48.9069091,25.1667879 C46.6261818,25.1667879 44.7385051,24.4078384 43.2438788,22.8899394 C41.7492525,21.3720404 41.0012929,19.4326465 41,17.0717576 Z M43.6957576,17.0717576 C43.6957576,18.9141818 44.172202,20.3965253 45.1250909,21.5187879 C46.0779798,22.6410505 47.327596,23.2028283 48.8739394,23.2041212 C50.4254545,23.2041212 51.6802424,22.6423434 52.638303,21.5187879 C53.5963636,20.3952323 54.0786263,18.9128889 54.0850909,17.0717576 C54.0850909,15.2422626 53.6028283,13.7657374 52.638303,12.6421818 C51.6737778,11.5186263 50.4189899,10.9574949 48.8739394,10.9587879 C47.3224242,10.9587879 46.0728081,11.5205657 45.1250909,12.6441212 C44.1773737,13.7676768 43.7009293,15.2435556 43.6957576,17.0717576 Z"
                  />
                  <path
                    d="M70.0824261,23.582303 C69.3285884,24.0285568 68.5220417,24.3790594 67.6814564,24.625697 C66.9065592,24.8487063 66.1042899,24.9622904 65.2979413,24.9631515 C63.1180625,24.9631515 61.3564463,24.2397576 60.0130928,22.7929697 C58.6697392,21.3461818 57.9987089,19.4449293 58.0000019,17.0892121 C58.0000019,14.6882424 58.7175776,12.739798 60.1527291,11.2438788 C61.5878807,9.7479596 63.4626281,9 65.7769716,9 C66.5067857,9.0106757 67.2345208,9.08072506 67.9529716,9.20945455 C68.7804463,9.34650505 69.737214,9.55725253 70.8232746,9.84169697 L72.745214,9.06593939 L72.745214,22.4283636 C72.745214,24.213899 72.6605271,25.520404 72.4911534,26.3478788 C72.3424597,27.1215145 72.0497022,27.860316 71.6281231,28.5258182 C70.9908577,29.4891385 70.0844202,30.2438287 69.0215776,30.696 C67.7834618,31.2231176 66.4474127,31.48094 65.1020625,31.4523636 C64.1335045,31.4523045 63.1689244,31.3284732 62.2317594,31.0838788 C61.252533,30.8239772 60.3068642,30.4510466 59.41382,29.9726061 L58.9696988,26.7512727 L60.9575776,28.0506667 C61.5573127,28.4240193 62.2116549,28.7014604 62.8969716,28.8729697 C63.6457641,29.0836796 64.4192481,29.1938978 65.1970928,29.2007273 C66.7486079,29.2007273 67.9516786,28.8128485 68.8063049,28.0370909 C69.6609312,27.2613333 70.0863049,26.1571717 70.0824261,24.7246061 L70.0824261,23.582303 Z M70.0824261,21.5595152 L70.0824261,12.0739394 C69.4432737,11.7542576 68.7741844,11.4983147 68.0848503,11.3098182 C67.4816476,11.1457578 66.859767,11.0603633 66.2346685,11.0557576 C64.581012,11.0557576 63.2499413,11.6117172 62.2414564,12.7236364 C61.2329716,13.8355556 60.7280827,15.3146667 60.7267897,17.1609697 C60.7267897,18.9348687 61.179315,20.3428687 62.0843655,21.3849697 C62.989416,22.4270707 64.2086483,22.9474747 65.7420625,22.9461818 C66.3845516,22.9385817 67.0221469,22.8332967 67.6329716,22.6339394 C68.4792669,22.3480186 69.2988853,21.9885027 70.0824261,21.5595152 L70.0824261,21.5595152 Z"
                  />
                  <path
                    d="M75,9 L77.8276364,9 L82.2649697,20.6363636 L87.1483636,9 L89.4504242,9 L82.3813333,25.3238788 L82.2649697,25.5546667 C81.1478788,28.0965657 80.2874343,29.9066667 79.6836364,30.9849697 L76.7415758,30.9849697 C77.3683498,30.3346009 77.9302011,29.6246546 78.4191515,28.8652121 C79.0313917,27.8817808 79.5750659,26.8572886 80.046303,25.7990303 L81.0004848,23.7452121 L75,9 Z"
                  />
                </g>
              </svg>
            </div>
          </a>
          <div
            className="c5"
            style={
              Object {
                "flexGrow": "1",
                "margin": "0 0 0 24px",
              }
            }
          >
            <nav
              aria-label="Primary navigation"
              className="c6 c7"
              style={
                Object {
                  "paddingRight": "24px",
                }
              }
            >
              <div>
                <button
                  aria-expanded={false}
                  aria-haspopup={true}
                  className="c8"
                  color="#ffffff"
                  onBlur={[Function]}
                  onClick={[Function]}
                  type="button"
                >
                  Dashboard
                  <svg
                    aria-hidden={true}
                    className="c9 c10"
                    color="#ffffff"
                    fill="#ffffff"
                    focusable={false}
                    height="20px"
                    icon="downArrow"
                    p="2px"
                    size="20px"
                    style={
                      Object {
                        "position": "absolute",
                        "right": "8px",
                        "top": "11px",
                      }
                    }
                    title={null}
                    viewBox="0 0 24 24"
                    width="20px"
                  >
                    <path
                      d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                    />
                  </svg>
                </button>
              </div>
              <div>
                <a
                  className="c11"
                  color="#ffffff"
                  href="/"
                >
                  Link
                </a>
              </div>
            </nav>
            <div
              className="c12"
              style={
                Object {
                  "float": "right",
                }
              }
            >
              <nav
                aria-label="Secondary navigation"
                className="c6 c7"
              >
                <div>
                  <button
                    aria-expanded={false}
                    aria-haspopup={true}
                    className="c8"
                    color="#ffffff"
                    onBlur={[Function]}
                    onClick={[Function]}
                    type="button"
                  >
                    Settings
                    <svg
                      aria-hidden={true}
                      className="c9 c10"
                      color="#ffffff"
                      fill="#ffffff"
                      focusable={false}
                      height="20px"
                      icon="downArrow"
                      p="2px"
                      size="20px"
                      style={
                        Object {
                          "position": "absolute",
                          "right": "8px",
                          "top": "11px",
                        }
                      }
                      title={null}
                      viewBox="0 0 24 24"
                      width="20px"
                    >
                      <path
                        d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                      />
                    </svg>
                  </button>
                </div>
              </nav>
            </div>
          </div>
        </div>
      </header>
      <div
        className="c13"
      >
        <div
          className="c14"
        >
          <h1
            className="c16-h1 c15"
            fontSize="largest"
            fontWeight="light"
          >
            I am title
          </h1>
          <p
            className="c16 c17"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            I am main content.
          </p>
        </div>
        <div
          className="c18"
          width={
            Object {
              "extraSmall": "calc(100vw - 48px - 16px)",
              "large": "472px",
              "medium": "400px",
            }
          }
        >
          <div
            className="c19"
          >
            <h2
              className="c16-h2 c20"
              fontSize="larger"
              fontWeight="medium"
            >
              I am sidebar
            </h2>
            <button
              aria-label={null}
              className="c21 "
              disabled={false}
            >
              <svg
                aria-hidden={true}
                className="c9 c22"
                color="currentColor"
                fill="currentColor"
                focusable={false}
                height="32px"
                icon="close"
                p="half"
                size="32px"
                title={null}
                viewBox="0 0 24 24"
                width="32px"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </button>
          </div>
          <p
            className="c16 c17"
            color="currentColor"
            disabled={false}
            fontSize="medium"
          >
            I am sidbar content.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
